Finished design for assortment page desktop

--- a/frontend/src/app/assortment/assortment-title/assortment-title.component.html
+++ b/frontend/src/app/assortment/assortment-title/assortment-title.component.html
@@ -1,8 +1,8 @@
 <div class="flex justify-center font-comfortaa">
     <div class="w-1/2 flex justify-left pl-40 items-center">
         <div>
-            <h1 class="text-6xl font-bold">Soap</h1>
-            <p class="text-xl">Натуральное мыло ручной работы</p>
+            <h1 class="text-6xl font-bold">Натуральное мыло ручной работы</h1>
+            <!-- <p class="text-xl">Натуральное мыло ручной работы</p> -->
         </div>
     </div>
     <div class="w-1/2 flex justify-center overflow-hidden">
