--- a/frontend/src/app/assortment/assortment.component.html
+++ b/frontend/src/app/assortment/assortment.component.html
@@ -1,7 +1,15 @@
 <div class="w-full">
     <app-assortment-title></app-assortment-title>
 </div>
-<div class="my-10 flex w-5/6 mx-auto justify-center space-x-8">
+<div class="my-4 w-full h-14 bg-primary-800 flex justify-center space-x-36 items-center sides border">
+    @for (tag of tags; track $index) {
+        <p class="text-xl">
+            <i class="fa {{ tag.fieldIcon }} mr-2 text-2xl" aria-hidden="true"></i>
+            {{ tag.fieldName }}
+        </p>
+    }
+</div>
+<div class="flex w-5/6 mx-auto justify-center space-x-8">
     <div class="w-1/6 flex">
         <div class="w-full">
             <app-filter></app-filter>
@@ -19,3 +27,12 @@
         </div>
     </div>
 </div>
+
+<style>
+    .border {
+	border: 4px solid;
+}
+.sides {
+	border-image: linear-gradient(to left, #76a88d, #e9b59ceb) 1 0;
+}
+</style>
