--- a/frontend/src/app/components/grid-list/grid-list.component.html
+++ b/frontend/src/app/components/grid-list/grid-list.component.html
@@ -1,5 +1,5 @@
 <div class="flex justify-center">
-    <div class="grid grid-cols-2 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-x-8 gap-y-8">
+    <div class="grid grid-cols-2 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 xl:grid-cols-5 gap-x-8 gap-y-8">
         @for (soap of soapList; track soap) {
             <app-element-box [soap]="soap"></app-element-box>
         }
