--- a/frontend/src/app/components/element/element-page/element-page.component.html
+++ b/frontend/src/app/components/element/element-page/element-page.component.html
@@ -1,10 +1,10 @@
-<div class="lg:flex justify-center w-5/6 mx-auto my-4 space-x-10">
+<div class="md:flex justify-center w-5/6 mx-auto my-4 md:space-x-10 max-lg:space-y-4">
     <div class="lg:w-1/2 w-full flex items-center justify-end">
-        <div class="w-10/12 h-auto">
+        <div class="md:w-10/12 w-full mx-auto h-auto">
             <app-image-carousel [images]="soap.images"></app-image-carousel>
         </div>
     </div>
-    <div class="lg:w-1/2 w-full space-y-2 text-lg">
+    <div class="lg:w-1/2 w-full space-y-2 lg:text-lg text-base">
         <div>
             <p class="font-bold text-4xl">{{ soap.name }}</p>
         </div>
