--- a/frontend/src/app/components/header/header.component.html
+++ b/frontend/src/app/components/header/header.component.html
@@ -1,4 +1,4 @@
-<div class="flex text-lg text-nowrap w-full py-3 px-8 bg-dark-900 text-white font-comfortaa">
+<div class="flex text-lg text-nowrap w-full py-3 pmd:x-8 px-3 bg-dark-900 text-white font-comfortaa">
     <div class="lg:hidden my-auto text-2xl">
         <app-sidebar [menu]="menu"></app-sidebar>
     </div>
