--- a/frontend/src/app/assortment/assortment.component.html
+++ b/frontend/src/app/assortment/assortment.component.html
@@ -1,30 +1,41 @@
 <div class="w-full">
     <app-assortment-title></app-assortment-title>
 </div>
-<div class="my-4 w-full h-14 bg-primary-800 flex justify-center space-x-36 items-center sides border">
+<div class="my-4 w-full md:h-14 h-20 bg-primary-800 sides border flex justify-center items-center text-center text-nowrap">
+    <div class="items-center mx-auto w-11/12 grid grid-cols-4 max-sm:grid-cols-2 lg:gap-32 md:gap-16 gap-x-8 gap-y-2">
     @for (tag of tags; track $index) {
-        <p class="text-xl">
+        <p class="lg:text-xl md:text-lg text-base">
             <i class="fa {{ tag.fieldIcon }} mr-2 text-2xl" aria-hidden="true"></i>
             {{ tag.fieldName }}
         </p>
     }
+    </div>
 </div>
-<div class="flex w-5/6 mx-auto justify-center space-x-8">
-    <div class="w-1/6 flex">
-        <div class="w-full">
+<div class="sm:hidden flex justify-center mb-4" ClickedOutside (clickOutside)="onClickedOutside()">
+    <button class="w-96 bg-secondary-900 hover:bg-yellow-300 p-1 mx-auto" (click)="toggleSidebar()">
+        Open filter 🧩
+    </button>
+    <div class="z-50 lg:hidden fixed inset-y-0 left-0 w-64 bg-dark-900 text-white transition-transform duration-300 transform"
+    [class.translate-x-0]="filterSidebarOpen" [class.-translate-x-full]="!filterSidebarOpen">
+        <div class="p-2">
             <app-filter></app-filter>
         </div>
     </div>
-    <div class="w-5/6 flex justify-start">
+</div>
+<div class="mb-4 flex justify-center lg:w-11/12 w-full md:mx-auto sm:mx-2 overflow-hidden">
+    <div class="flex justify-center sm:space-x-8">
+    <div class="lg:w-1/4 md:w-1/3 flex justify-end">
+        <div class="w-full max-sm:hidden max-md:ml-2">
+            <app-filter></app-filter>
+        </div>
+    </div>
+    <div class="lg:w-5/6 w-full flex justify-start">
         <div class="space-y-4">
-            <!-- <div class="flex">
-                <input type="text" placeholder="Enter soap name here" class="flex-grow p-2 border border-gray-300">
-                <button class="w-36 ml-2 px-4 py-2 bg-secondary-900 hover:bg-secondary-600 text-nowrap">Search 🔍</button>
-            </div> -->
             <div class="overflow-hidden">
                 <app-grid-list></app-grid-list>
             </div>
         </div>
+    </div>
     </div>
 </div>
 
