--- a/frontend/src/app/components/element/element-box/element-box.component.html
+++ b/frontend/src/app/components/element/element-box/element-box.component.html
@@ -1,10 +1,10 @@
-<div class="sm:w-60 w-48h-auto space-y-2 hover:shadow-2xl transition-shadow duration-300">
+<div class="md:w-60 w-44 h-auto space-y-2 hover:shadow-2xl transition-shadow duration-300">
     <button (click)="onSoapPageOpen(soap.id)">
-        <div class="sm:w-60 sm:h-60 w-48 h-48 mx-auto">
+        <div class="md:w-60 md:h-60 w-44 h-44 mx-auto">
             <img src="{{ soap.image }}" alt="soap image"/>
-            <div class="z-10 relative sm:bottom-60 bottom-48 flex justify-end">
+            <div class="z-10 relative md:bottom-60 bottom-44 flex justify-end">
                 @if (soap.tag) {
-                    <div class="bg-emerald-300 px-1 m-2 text-sm">
+                    <div class="bg-emerald-300 px-1 m-2 text-md">
                         {{ soap.tag }}
                     </div>
                 }
@@ -12,7 +12,7 @@
         </div>
         <div class="text-center space-y-2">
             <div>
-                <p class="text-lg font-semibold">{{ soap.name }}</p>
+                <p class="md:text-lg text-base font-semibold">{{ soap.name }}</p>
                 <div class="flex justify-center space-x-1">
                     @if (soap.sale && soap.sale < soap.cost) {
                         <p class="text-red-500 font-semibold">{{ soap.sale | currency:'EUR':'symbol':'1.2-2' }}</p>
@@ -24,7 +24,10 @@
             </div>
         </div>
     </button>
-    <div>
+    <div class="space-y-2">
+        <button class="md:hidden bg-secondary-900 hover:bg-yellow-300 p-1 w-full" (click)="onSoapPageOpen(soap.id)">
+            Quick view 🎗️
+        </button>
         <button class="bg-secondary-900 hover:bg-yellow-300 p-1 w-full">
             Add to favorites ❤️
         </button>
