--- a/frontend/src/app/components/header/sidebar/sidebar.component.html
+++ b/frontend/src/app/components/header/sidebar/sidebar.component.html
@@ -6,7 +6,7 @@
     [class.translate-x-0]="dropdownOpen" [class.-translate-x-full]="!dropdownOpen">
     <ul class="px-6 py-1 mt-6 flex flex-col space-y-6 items-start h-full">
       @for (m of menu; track $index) {
-        <li><a class="text-white hover:text-primary-200" routerLink="{{ m.route }}">{{ m.name }}</a></li>
+        <li><a class="text-white hover:text-primary-200" routerLink="{{ m.route }}" (click)="toggleDropdown()">{{ m.name }}</a></li>
       }
     </ul>
   </div>
